--- a/MainProject/src/client/MainPage.form
+++ b/MainProject/src/client/MainPage.form
@@ -90,23 +90,21 @@
                                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                               <Component id="followThemTextField" max="32767" attributes="0"/>
                                           </Group>
-                                          <Group type="102" attributes="0">
-                                              <Group type="103" groupAlignment="0" attributes="0">
-                                                  <Component id="unfollowThemLabel" min="-2" max="-2" attributes="0"/>
-                                                  <Group type="102" alignment="0" attributes="0">
-                                                      <Component id="usernameUnfollowThemLabel" min="-2" max="-2" attributes="0"/>
-                                                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                                      <Component id="unfollowThemTextField" min="-2" pref="160" max="-2" attributes="0"/>
-                                                  </Group>
-                                              </Group>
-                                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                                          </Group>
                                           <Group type="102" alignment="1" attributes="0">
                                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                                               <Group type="103" groupAlignment="0" attributes="0">
                                                   <Component id="followThemButton" alignment="1" min="-2" max="-2" attributes="0"/>
                                                   <Component id="unfollowThemButton" alignment="1" min="-2" max="-2" attributes="0"/>
                                               </Group>
+                                          </Group>
+                                          <Group type="102" attributes="0">
+                                              <Component id="unfollowThemLabel" min="-2" max="-2" attributes="0"/>
+                                              <EmptySpace min="0" pref="92" max="32767" attributes="0"/>
+                                          </Group>
+                                          <Group type="102" alignment="0" attributes="0">
+                                              <Component id="usernameUnfollowThemLabel" min="-2" max="-2" attributes="0"/>
+                                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                              <Component id="unfollowThemComboBox" max="32767" attributes="0"/>
                                           </Group>
                                       </Group>
                                   </Group>
@@ -148,7 +146,7 @@
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="usernameUnfollowThemLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="unfollowThemTextField" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="unfollowThemComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="unfollowThemButton" min="-2" max="-2" attributes="0"/>
@@ -234,8 +232,6 @@
                 <Property name="text" type="java.lang.String" value="Username:"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="unfollowThemTextField">
-            </Component>
             <Component class="javax.swing.JButton" name="unfollowThemButton">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Unfollow"/>
@@ -243,6 +239,21 @@
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="unfollowThemButtonActionPerformed"/>
               </Events>
+            </Component>
+            <Component class="javax.swing.JComboBox" name="unfollowThemComboBox">
+              <Properties>
+                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                  <StringArray count="4">
+                    <StringItem index="0" value="Item 1"/>
+                    <StringItem index="1" value="Item 2"/>
+                    <StringItem index="2" value="Item 3"/>
+                    <StringItem index="3" value="Item 4"/>
+                  </StringArray>
+                </Property>
+              </Properties>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+              </AuxValues>
             </Component>
           </SubComponents>
         </Container>
